added simple XMR storing
