# api-docs.swagger.v1.yaml
@@ -9,6 +9,7 @@ basePath: /
 tags:
 - { name: user, description: User related actions }
 - { name: vpn list, description: VPN list operations }
+- { name: xmr, description: XMR is a information about operation of decreasing and encreasing the balance }
 
 paths:
   /user:
@@ -35,7 +36,7 @@ paths:
         type: file
       responses:
         200: { description: File uploaded, user and password stored in db }
-  /user/{address}/info:
+  /user/:address:
     get:
       summary: Get user info with given wallet
       tags: [ user ]
@@ -72,3 +73,22 @@ paths:
       responses:
         200:
           description: Sever was updated successfully
+  /xmr/:address:
+    get:
+      summary: Get list of xmrs, registered via this server related to this address
+      tags: [ xmr ]
+      responses:
+        200:
+          description: Returns list of XMR
+          schema: { type: array,  items: { type: object } }
+    post:
+      summary: Add XMR to particular address (wallet) and send it to pool
+      tags: [ xmr ]
+      parameters:
+      - in: body
+        name: body
+        description: XMR object to be sent to pool
+        schema: { type: object }
+      responses:
+        200:
+          description: XMR was sent to pool and stored in the system
